--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#Random reference file from Juniper vLab
+full-device.txt
+
+#MacOS metadata file that I want to ignore
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
