--- a/_output/QFX3.conf
+++ b/_output/QFX3.conf
@@ -32,7 +32,6 @@ system {
     }
 
 }
-vlans {
 interfaces {
     ge-0/0/1 {
         unit 0 {
@@ -51,5 +50,22 @@ interfaces {
                 description to QFX5 ;
             }
         }
+    }
+}
+vlans {
+    VLAN0010 {
+        vlan-id 10;
+        l3-interface irb.10;
+        description Users 
+    }
+    VLAN0020 {
+        vlan-id 20;
+        l3-interface irb.20;
+        description Phones 
+    }
+    VLAN0030 {
+        vlan-id 30;
+        l3-interface irb.30;
+        description Printers 
     }
 }
