Finalized topology planning, made vlans per-CN named, numbered, and described. Additionally added preliminary templates for access and trunk ports

--- a/_output/QFX2.conf
+++ b/_output/QFX2.conf
@@ -32,11 +32,12 @@ system {
     }
 
 }
+
 interfaces {
     ge-0/0/1 {
         unit 0 {
             family inet {
-                address 192.168.1.2 /24 ;
+                address 10.1.2.2 /30 ;
                 no-redirects;
                 description to QFX1 ;
             }
@@ -45,27 +46,54 @@ interfaces {
     ge-0/0/2 {
         unit 0 {
             family inet {
-                address 10.10.1.2 /24 ;
+                address 10.2.3.1 /30 ;
+                no-redirects;
+                description to QFX3 ;
+            }
+        }
+    }
+    ge-0/0/2 {
+        unit 0 {
+            family inet {
+                address 10.2.4.1 /30 ;
                 no-redirects;
                 description to QFX4 ;
             }
         }
     }
+    irb {
+        unit 240 {
+            family inet {
+                address 192.168.2.1 /24 ;
+                no-redirects;
+                description CN2_MGMT ;
+            }
+        }
+    }
+}
+interfaces {
+}
+interfaces {
 }
 vlans {
-    VLAN0010 {
-        vlan-id 10;
-        l3-interface irb.10;
-        description Users 
+    CN2_CN1_USERS {
+        vlan-id 2110;
+        l3-interface irb.2110;
+        description CN2_CN1_Users 
     }
-    VLAN0020 {
-        vlan-id 20;
-        l3-interface irb.20;
-        description Phones 
+    CN2_CN1_PHONES {
+        vlan-id 2120;
+        l3-interface irb.2120;
+        description CN2_CN1_Phones 
     }
-    VLAN0030 {
-        vlan-id 30;
-        l3-interface irb.30;
-        description Printers 
+    CN2_CN1_PRINTERS {
+        vlan-id 2130;
+        l3-interface irb.2130;
+        description CN2_CN1_Printers 
+    }
+    CN2_CN1_MGMT {
+        vlan-id 2140;
+        l3-interface irb.2140;
+        description CN2_CN1_Management 
     }
 }
