--- a/_output/QFX1.conf
+++ b/_output/QFX1.conf
@@ -32,11 +32,12 @@ system {
     }
 
 }
+
 interfaces {
     ge-0/0/1 {
         unit 0 {
             family inet {
-                address 192.168.1.1 /24 ;
+                address 10.1.2.1 /30 ;
                 no-redirects;
                 description to QFX2 ;
             }
@@ -45,27 +46,54 @@ interfaces {
     ge-0/0/2 {
         unit 0 {
             family inet {
-                address 10.10.1.1 /24 ;
+                address 10.1.3.1 /30 ;
                 no-redirects;
                 description to QFX3 ;
             }
         }
     }
+    ge-0/0/3 {
+        unit 0 {
+            family inet {
+                address 10.1.4.1 /30 ;
+                no-redirects;
+                description to QFX4 ;
+            }
+        }
+    }
+    irb {
+        unit 140 {
+            family inet {
+                address 192.168.1.1 /24 ;
+                no-redirects;
+                description CN1_MGMT ;
+            }
+        }
+    }
+}
+interfaces {
+}
+interfaces {
 }
 vlans {
-    VLAN0010 {
-        vlan-id 10;
-        l3-interface irb.10;
-        description Users 
+    CN1_USERS {
+        vlan-id 110;
+        l3-interface irb.110;
+        description CN1_Users 
     }
-    VLAN0020 {
-        vlan-id 20;
-        l3-interface irb.20;
-        description Phones 
+    CN1_PHONES {
+        vlan-id 120;
+        l3-interface irb.120;
+        description CN1_Phones 
     }
-    VLAN0030 {
-        vlan-id 30;
-        l3-interface irb.30;
-        description Printers 
+    CN1_PRINTERS {
+        vlan-id 130;
+        l3-interface irb.130;
+        description CN1_Printers 
+    }
+    CN1_MGMT {
+        vlan-id 140;
+        l3-interface irb.140;
+        description CN1_Management 
     }
 }
