--- a/_output/QFX3.conf
+++ b/_output/QFX3.conf
@@ -32,11 +32,12 @@ system {
     }
 
 }
+
 interfaces {
     ge-0/0/1 {
         unit 0 {
             family inet {
-                address 192.168.1.3 /24 ;
+                address 10.1.3.2 /30 ;
                 no-redirects;
                 description to QFX1 ;
             }
@@ -45,27 +46,45 @@ interfaces {
     ge-0/0/2 {
         unit 0 {
             family inet {
-                address 10.10.1.3 /24 ;
+                address 10.2.3.2 /30 ;
                 no-redirects;
-                description to QFX5 ;
+                description to QFX2 ;
+            }
+        }
+    }
+    irb {
+        unit 140 {
+            family inet {
+                address 192.168.1.3 /24 ;
+                no-redirects;
+                description CN1_MGMT ;
             }
         }
     }
 }
+interfaces {
+}
+interfaces {
+}
 vlans {
-    VLAN0010 {
-        vlan-id 10;
-        l3-interface irb.10;
-        description Users 
+    CN1_CN2_CN1_USERS {
+        vlan-id 12110;
+        l3-interface irb.12110;
+        description CN1_CN2_CN1_Users 
     }
-    VLAN0020 {
-        vlan-id 20;
-        l3-interface irb.20;
-        description Phones 
+    CN1_CN2_CN1_PHONES {
+        vlan-id 12120;
+        l3-interface irb.12120;
+        description CN1_CN2_CN1_Phones 
     }
-    VLAN0030 {
-        vlan-id 30;
-        l3-interface irb.30;
-        description Printers 
+    CN1_CN2_CN1_PRINTERS {
+        vlan-id 12130;
+        l3-interface irb.12130;
+        description CN1_CN2_CN1_Printers 
+    }
+    CN1_CN2_CN1_MGMT {
+        vlan-id 12140;
+        l3-interface irb.12140;
+        description CN1_CN2_CN1_Management 
     }
 }
