--- a/_output/QFX4.conf
+++ b/_output/QFX4.conf
@@ -32,40 +32,59 @@ system {
     }
 
 }
+
 interfaces {
     ge-0/0/1 {
         unit 0 {
             family inet {
-                address 192.168.1.4 /24 ;
+                address 10.1.4.2 /30 ;
                 no-redirects;
-                description to QFX2 ;
+                description to QFX1 ;
             }
         }
     }
     ge-0/0/2 {
         unit 0 {
             family inet {
-                address 10.10.1.4 /24 ;
+                address 10.2.4.2 /30 ;
                 no-redirects;
-                description to hosts ;
+                description to QFX2 ;
+            }
+        }
+    }
+    irb {
+        unit 240 {
+            family inet {
+                address 192.168.2.4 /24 ;
+                no-redirects;
+                description CN2_MGMT ;
             }
         }
     }
 }
+interfaces {
+}
+interfaces {
+}
 vlans {
-    VLAN0010 {
-        vlan-id 10;
-        l3-interface irb.10;
-        description Users 
+    CN2_CN1_CN2_CN1_USERS {
+        vlan-id 212110;
+        l3-interface irb.212110;
+        description CN2_CN1_CN2_CN1_Users 
     }
-    VLAN0020 {
-        vlan-id 20;
-        l3-interface irb.20;
-        description Phones 
+    CN2_CN1_CN2_CN1_PHONES {
+        vlan-id 212120;
+        l3-interface irb.212120;
+        description CN2_CN1_CN2_CN1_Phones 
     }
-    VLAN0030 {
-        vlan-id 30;
-        l3-interface irb.30;
-        description Printers 
+    CN2_CN1_CN2_CN1_PRINTERS {
+        vlan-id 212130;
+        l3-interface irb.212130;
+        description CN2_CN1_CN2_CN1_Printers 
+    }
+    CN2_CN1_CN2_CN1_MGMT {
+        vlan-id 212140;
+        l3-interface irb.212140;
+        description CN2_CN1_CN2_CN1_Management 
     }
 }
