--- a/devices.yml
+++ b/devices.yml
@@ -1,66 +1,123 @@
 ---
 devices:
   - hostname: QFX1
+    CN: CN1
     interfaces:
       - name: ge-0/0/1
         unit: 0
+        ip: 10.1.2.1
+        mask: /30
+        description: to QFX2
+      - name: ge-0/0/2
+        unit: 0
+        ip: 10.1.3.1
+        mask: /30
+        description: to QFX3
+      - name: ge-0/0/3
+        unit: 0
+        ip: 10.1.4.1
+        mask: /30
+        description: to QFX4
+      - name: irb
+        unit: 140
         ip: 192.168.1.1
         mask: /24
-        description: to QFX2
-      - name: ge-0/0/2
-        unit: 0
-        ip: 10.10.1.1
-        mask: /24
-        description: to QFX3
+        description: CN1_MGMT
 
   - hostname: QFX2
+    CN: CN2
     interfaces:
       - name: ge-0/0/1
         unit: 0
-        ip: 192.168.1.2
-        mask: /24
+        ip: 10.1.2.2
+        mask: /30
         description: to QFX1
       - name: ge-0/0/2
         unit: 0
-        ip: 10.10.1.2
-        mask: /24
-        description: to QFX4
-
-  - hostname: QFX3
-    interfaces:
-      - name: ge-0/0/1
-        unit: 0
-        ip: 192.168.1.3
-        mask: /24
-        description: to QFX1
-      - name: ge-0/0/2
-        unit: 0
-        ip: 10.10.1.3
-        mask: /24
-        description: to QFX5
-
-  - hostname: QFX4
-    interfaces:
-      - name: ge-0/0/1
-        unit: 0
-        ip: 192.168.1.4
-        mask: /24
-        description: to QFX2
-      - name: ge-0/0/2
-        unit: 0
-        ip: 10.10.1.4
-        mask: /24
-        description: to hosts
-
-  - hostname: QFX5
-    interfaces:
-      - name: ge-0/0/1
-        unit: 0
-        ip: 192.168.1.5
-        mask: /24
+        ip: 10.2.3.1
+        mask: /30
         description: to QFX3
       - name: ge-0/0/2
         unit: 0
-        ip: 10.10.1.5
+        ip: 10.2.4.1
+        mask: /30
+        description: to QFX4
+      - name: irb
+        unit: 240
+        ip: 192.168.2.1
         mask: /24
-        description: to hosts
+        description: CN2_MGMT
+
+  - hostname: QFX3
+    CN: CN1
+    interfaces:
+      - name: ge-0/0/1
+        unit: 0
+        ip: 10.1.3.2
+        mask: /30
+        description: to QFX1
+      - name: ge-0/0/2
+        unit: 0
+        ip: 10.2.3.2
+        mask: /30
+        description: to QFX2
+      - name: irb
+        unit: 140
+        ip: 192.168.1.3
+        mask: /24
+        description: CN1_MGMT
+
+  - hostname: QFX4
+    CN: CN2
+    interfaces:
+      - name: ge-0/0/1
+        unit: 0
+        ip: 10.1.4.2
+        mask: /30
+        description: to QFX1
+      - name: ge-0/0/2
+        unit: 0
+        ip: 10.2.4.2
+        mask: /30
+        description: to QFX2
+      - name: irb
+        unit: 240
+        ip: 192.168.2.4
+        mask: /24
+        description: CN2_MGMT
+
+  - hostname: QFX5
+    CN: CN1
+    interfaces:
+      - name: irb
+        unit: 140
+        ip: 192.168.1.5
+        mask: /24
+        description: CN1_MGMT
+
+  - hostname: QFX6
+    CN: CN1
+    interfaces:
+      - name: irb
+        unit: 140
+        ip: 192.168.1.6
+        mask: /24
+        description: CN1_MGMT
+
+  - hostname: QFX7
+    CN: CN2
+    interfaces:
+      - name: irb
+        unit: 240
+        ip: 192.168.2.7
+        mask: /24
+        description: CN2_MGMT
+
+  - hostname: QFX8
+    CN: CN2
+    interfaces:
+      - name: irb
+        unit: 240
+        ip: 192.168.2.8
+        mask: /24
+        description: CN2_MGMT
