changed interfaces to match standalone lab VMs

--- a/_output/AN5.conf
+++ b/_output/AN5.conf
@@ -33,7 +33,6 @@ system {
     }
 
 }
-
 interfaces {
     irb {
         unit 140 {
@@ -67,8 +66,7 @@ interfaces {
             }
         }
     }
-}
-vlans {
+}vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
