--- a/_output/AN6.conf
+++ b/_output/AN6.conf
@@ -33,7 +33,6 @@ system {
     }
 
 }
-
 interfaces {
     irb {
         unit 140 {
@@ -46,8 +45,7 @@ interfaces {
     }
 interfaces {
 
-}
-vlans {
+}vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
