--- a/_output/AN8.conf
+++ b/_output/AN8.conf
@@ -33,7 +33,6 @@ system {
     }
 
 }
-
 interfaces {
     irb {
         unit 240 {
@@ -46,8 +45,7 @@ interfaces {
     }
 interfaces {
 
-}
-vlans {
+}vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
