--- a/_output/CN1.conf
+++ b/_output/CN1.conf
@@ -33,9 +33,8 @@ system {
     }
 
 }
-
 interfaces {
-    ge-0/0/1 {
+    em0 {
         unit 0 {
             family inet {
                 address 10.1.2.1 /30;
@@ -44,7 +43,7 @@ interfaces {
             }
         }
     }
-    ge-0/0/2 {
+    em1 {
         unit 0 {
             family inet {
                 address 10.1.3.1 /30;
@@ -53,7 +52,7 @@ interfaces {
             }
         }
     }
-    ge-0/0/3 {
+    em3 {
         unit 0 {
             family inet {
                 address 10.1.4.1 /30;
@@ -73,8 +72,7 @@ interfaces {
     }
 interfaces {
 
-}
-vlans {
+}vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
