--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -33,9 +33,8 @@ system {
     }
 
 }
-
 interfaces {
-    ge-0/0/1 {
+    em0 {
         unit 0 {
             family inet {
                 address 10.1.4.2 /30;
@@ -44,7 +43,7 @@ interfaces {
             }
         }
     }
-    ge-0/0/2 {
+    em1 {
         unit 0 {
             family inet {
                 address 10.2.4.2 /30;
@@ -100,8 +99,7 @@ interfaces {
         }
     }
 
-}
-vlans {
+}vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
