--- a/devices.yml
+++ b/devices.yml
@@ -3,17 +3,17 @@ devices:
   - hostname: CN1
     CN: CN1
     interfaces:
-      - name: ge-0/0/1
+      - name: em0
         unit: 0
         ip: 10.1.2.1
         mask: /30
         description: to QFX2
-      - name: ge-0/0/2
+      - name: em1
         unit: 0
         ip: 10.1.3.1
         mask: /30
         description: to QFX3
-      - name: ge-0/0/3
+      - name: em3
         unit: 0
         ip: 10.1.4.1
         mask: /30
@@ -27,17 +27,17 @@ devices:
   - hostname: CN2
     CN: CN2
     interfaces:
-      - name: ge-0/0/1
+      - name: em0
         unit: 0
         ip: 10.1.2.2
         mask: /30
         description: to QFX1
-      - name: ge-0/0/2
+      - name: em1
         unit: 0
         ip: 10.2.3.1
         mask: /30
         description: to QFX3
-      - name: ge-0/0/2
+      - name: em1
         unit: 0
         ip: 10.2.4.1
         mask: /30
@@ -51,12 +51,12 @@ devices:
   - hostname: DN1
     CN: CN1
     interfaces:
-      - name: ge-0/0/1
+      - name: em0
         unit: 0
         ip: 10.1.3.2
         mask: /30
         description: to QFX1
-      - name: ge-0/0/2
+      - name: em1
         unit: 0
         ip: 10.2.3.2
         mask: /30
@@ -70,12 +70,12 @@ devices:
   - hostname: DN2
     CN: CN2
     interfaces:
-      - name: ge-0/0/1
+      - name: em0
         unit: 0
         ip: 10.1.4.2
         mask: /30
         description: to QFX1
-      - name: ge-0/0/2
+      - name: em1
         unit: 0
         ip: 10.2.4.2
         mask: /30
