finalized lab topology from working VMs and added OSPF section

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #Random reference file from Juniper vLab
 full-device.txt
-
+Juniper Lab 3-tier campus.yaml
 #MacOS metadata file that I want to ignore
 .DS_Store
 
