fixed lack of lines between root hierarchy statements

--- a/_output/CN1.conf
+++ b/_output/CN1.conf
@@ -87,7 +87,8 @@ interfaces {
     }
 interfaces {
 
-}vlans {
+}
+vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
@@ -108,7 +109,8 @@ interfaces {
         l3-interface irb.140;
         description CN1_Management; 
     }
-}ospf {
+}
+ospf {
     area 0.0.0.0 {
         interface xe-0/0/0.0 {
             interface-type p2p;
