--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -125,7 +125,8 @@ interfaces {
             }
         }
     }
-}vlans {
+}
+vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
@@ -146,7 +147,8 @@ interfaces {
         l3-interface irb.240;
         description CN2_Management; 
     }
-}ospf {
+}
+ospf {
     area 0.0.0.0 {
     }
     reference-bandwidth 100g;
