--- a/_output/AN5.conf
+++ b/_output/AN5.conf
@@ -61,7 +61,8 @@ interfaces {
             }
         }
     }
-}vlans {
+}
+vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
@@ -82,7 +83,8 @@ interfaces {
         l3-interface irb.140;
         description CN1_Management; 
     }
-}ospf {
+}
+ospf {
     area 0.0.0.0 {
     }
     reference-bandwidth 100g;
