--- a/_output/AN7.conf
+++ b/_output/AN7.conf
@@ -61,7 +61,8 @@ interfaces {
             }
         }
     }
-}vlans {
+}
+vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
@@ -82,7 +83,8 @@ interfaces {
         l3-interface irb.240;
         description CN2_Management; 
     }
-}ospf {
+}
+ospf {
     area 0.0.0.0 {
     }
     reference-bandwidth 100g;
