--- a/_output/CN2.conf
+++ b/_output/CN2.conf
@@ -87,7 +87,8 @@ interfaces {
     }
 interfaces {
 
-}vlans {
+}
+vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
@@ -108,7 +109,8 @@ interfaces {
         l3-interface irb.240;
         description CN2_Management; 
     }
-}ospf {
+}
+ospf {
     area 0.0.0.0 {
     }
     reference-bandwidth 100g;
