--- a/_output/DN1.conf
+++ b/_output/DN1.conf
@@ -125,7 +125,8 @@ interfaces {
             }
         }
     }
-}vlans {
+}
+vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
@@ -146,7 +147,8 @@ interfaces {
         l3-interface irb.140;
         description CN1_Management; 
     }
-}ospf {
+}
+ospf {
     area 0.0.0.0 {
     }
     reference-bandwidth 100g;
