added basic access ports

--- a/devices.yml
+++ b/devices.yml
@@ -62,6 +62,11 @@ devices:
         ip: 192.168.2.1
         mask: /24
         description: CN2_MGMT
+    ospf_interfaces:
+      - name: xe-0/0/0
+      - name: xe-0/0/1
+      - name: xe-0/0/2
+      - name: xe-0/0/3
 
   - hostname: DN1
     CN: CN1
@@ -84,6 +89,18 @@ devices:
     trunk_ports:
       - name: xe-0/0/2
       - name: xe-0/0/3
+    ospf_interfaces:
+      - name: xe-0/0/0
+      - name: xe-0/0/1
+    access_ports:
+      - name: xe-0/0/4
+      - name: xe-0/0/5
+      - name: xe-0/0/6
+      - name: xe-0/0/7
+      - name: xe-0/0/8
+      - name: xe-0/0/9
+      - name: xe-0/0/10
+      - name: xe-0/0/11
 
   - hostname: DN2
     CN: CN2
@@ -106,6 +123,18 @@ devices:
     trunk_ports:
       - name: xe-0/0/2
       - name: xe-0/0/3
+    ospf_interfaces:
+      - name: xe-0/0/0
+      - name: xe-0/0/1
+    access_ports:
+      - name: xe-0/0/4
+      - name: xe-0/0/5
+      - name: xe-0/0/6
+      - name: xe-0/0/7
+      - name: xe-0/0/8
+      - name: xe-0/0/9
+      - name: xe-0/0/10
+      - name: xe-0/0/11
 
   - hostname: AN5
     CN: CN1
@@ -117,6 +146,18 @@ devices:
         description: CN1_MGMT
     trunk_ports:
       - name: xe-0/0/0
+    access_ports:
+      - name: xe-0/0/1
+      - name: xe-0/0/2
+      - name: xe-0/0/3
+      - name: xe-0/0/4
+      - name: xe-0/0/5
+      - name: xe-0/0/6
+      - name: xe-0/0/7
+      - name: xe-0/0/8
+      - name: xe-0/0/9
+      - name: xe-0/0/10
+      - name: xe-0/0/11
 
   - hostname: AN6
     CN: CN1
@@ -128,6 +169,18 @@ devices:
         description: CN1_MGMT
     trunk_ports:
       - name: xe-0/0/0
+    access_ports:
+      - name: xe-0/0/1
+      - name: xe-0/0/2
+      - name: xe-0/0/3
+      - name: xe-0/0/4
+      - name: xe-0/0/5
+      - name: xe-0/0/6
+      - name: xe-0/0/7
+      - name: xe-0/0/8
+      - name: xe-0/0/9
+      - name: xe-0/0/10
+      - name: xe-0/0/11
 
   - hostname: AN7
     CN: CN2
@@ -139,6 +192,18 @@ devices:
         description: CN2_MGMT
     trunk_ports:
       - name: xe-0/0/0
+    access_ports:
+      - name: xe-0/0/1
+      - name: xe-0/0/2
+      - name: xe-0/0/3
+      - name: xe-0/0/4
+      - name: xe-0/0/5
+      - name: xe-0/0/6
+      - name: xe-0/0/7
+      - name: xe-0/0/8
+      - name: xe-0/0/9
+      - name: xe-0/0/10
+      - name: xe-0/0/11
 
   - hostname: AN8
     CN: CN2
@@ -150,3 +215,15 @@ devices:
         description: CN2_MGMT
     trunk_ports:
       - name: xe-0/0/0
+    access_ports:
+      - name: xe-0/0/1
+      - name: xe-0/0/2
+      - name: xe-0/0/3
+      - name: xe-0/0/4
+      - name: xe-0/0/5
+      - name: xe-0/0/6
+      - name: xe-0/0/7
+      - name: xe-0/0/8
+      - name: xe-0/0/9
+      - name: xe-0/0/10
+      - name: xe-0/0/11
