--- a/_output/CN2.conf
+++ b/_output/CN2.conf
@@ -107,41 +107,51 @@ vlans {
         l3-interface irb.240;
         description CN2_Management; 
     }
-}
-ospf {
-    area 0.0.0.0 {
-        interface xe-0/0/0.0 {
-            interface-type p2p;
-            hello-interval 1;
-            dead-interval 4;
-            authentication {
-                md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
-            }
-        }
-        interface xe-0/0/1.0 {
-            interface-type p2p;
-            hello-interval 1;
-            dead-interval 4;
-            authentication {
-                md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
-            }
-        }
-        interface xe-0/0/2.0 {
-            interface-type p2p;
-            hello-interval 1;
-            dead-interval 4;
-            authentication {
-                md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
-            }
-        }
-        interface xe-0/0/3.0 {
-            interface-type p2p;
-            hello-interval 1;
-            dead-interval 4;
-            authentication {
-                md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
-            }
-        }
+    DEAD_VLAN {
+        vlan-id 666;
+        description DEAD_VLAN;
     }
-    reference-bandwidth 100g;
+    NATIVE_VLAN {
+        vlan-id 999;
+        description NATIVE_VLAN;
+    }
+}
+protocols {
+        ospf {
+            area 0.0.0.0 {
+                interface xe-0/0/0.0 {
+                    interface-type p2p;
+                    hello-interval 1;
+                    dead-interval 4;
+                    authentication {
+                        md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
+                    }
+                }
+                interface xe-0/0/1.0 {
+                    interface-type p2p;
+                    hello-interval 1;
+                    dead-interval 4;
+                    authentication {
+                        md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
+                    }
+                }
+                interface xe-0/0/2.0 {
+                    interface-type p2p;
+                    hello-interval 1;
+                    dead-interval 4;
+                    authentication {
+                        md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
+                    }
+                }
+                interface xe-0/0/3.0 {
+                    interface-type p2p;
+                    hello-interval 1;
+                    dead-interval 4;
+                    authentication {
+                        md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
+                    }
+                }
+            }
+            reference-bandwidth 100g;
+        }
 }
