--- a/_output/AN8.conf
+++ b/_output/AN8.conf
@@ -52,10 +52,10 @@ interfaces {
     xe-0/0/0 {
         unit 0 {
             family ethernet-switching {
-                native-vlan-id 666;
+                native-vlan-id 999;
                 port-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ];
                 }
             }
         }
@@ -203,9 +203,12 @@ vlans {
         l3-interface irb.240;
         description CN2_Management; 
     }
-}
-ospf {
-    area 0.0.0.0 {
+    DEAD_VLAN {
+        vlan-id 666;
+        description DEAD_VLAN;
     }
-    reference-bandwidth 100g;
+    NATIVE_VLAN {
+        vlan-id 999;
+        description NATIVE_VLAN;
+    }
 }
