--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -99,13 +99,29 @@ interfaces {
                 description "layer 3 interface for vlan CN2_MGMT 240"
             }
         }
+    irb {
+        unit CN2666 {
+            family inet {
+                address 10.2.666/24;
+                no-redirects;
+                description "layer 3 interface for vlan CN2_DEAD_VLAN 2666"
+            }
+        }
+    irb {
+        unit CN2999 {
+            family inet {
+                address 10.2.999/24;
+                no-redirects;
+                description "layer 3 interface for vlan CN2_NATIVE_VLAN 2999"
+            }
+        }
     xe-0/0/2 {
         unit 0 {
             family ethernet-switching {
-                native-vlan-id 666;
+                native-vlan-id 999;
                 port-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ];
                 }
             }
         }
@@ -113,10 +129,10 @@ interfaces {
     xe-0/0/3 {
         unit 0 {
             family ethernet-switching {
-                native-vlan-id 666;
+                native-vlan-id 999;
                 port-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ];
                 }
             }
         }
@@ -231,25 +247,35 @@ vlans {
         l3-interface irb.240;
         description CN2_Management; 
     }
-}
-ospf {
-    area 0.0.0.0 {
-        interface xe-0/0/0.0 {
-            interface-type p2p;
-            hello-interval 1;
-            dead-interval 4;
-            authentication {
-                md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
-            }
-        }
-        interface xe-0/0/1.0 {
-            interface-type p2p;
-            hello-interval 1;
-            dead-interval 4;
-            authentication {
-                md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
-            }
-        }
+    DEAD_VLAN {
+        vlan-id 666;
+        description DEAD_VLAN;
     }
-    reference-bandwidth 100g;
+    NATIVE_VLAN {
+        vlan-id 999;
+        description NATIVE_VLAN;
+    }
+}
+protocols {
+        ospf {
+            area 0.0.0.0 {
+                interface xe-0/0/0.0 {
+                    interface-type p2p;
+                    hello-interval 1;
+                    dead-interval 4;
+                    authentication {
+                        md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
+                    }
+                }
+                interface xe-0/0/1.0 {
+                    interface-type p2p;
+                    hello-interval 1;
+                    dead-interval 4;
+                    authentication {
+                        md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
+                    }
+                }
+            }
+            reference-bandwidth 100g;
+        }
 }
