removing vlans from CN configuration

--- a/_output/AN5.conf
+++ b/_output/AN5.conf
@@ -120,8 +120,7 @@ interfaces {
             }
         }
     }
-}
-vlans {
+}vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
