--- a/_output/AN8.conf
+++ b/_output/AN8.conf
@@ -150,8 +150,7 @@ interfaces {
             }
         }
     }
-}
-vlans {
+}vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
