--- a/_output/DN1.conf
+++ b/_output/DN1.conf
@@ -177,8 +177,7 @@ interfaces {
             }
         }
     }
-}
-vlans {
+}vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
