--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -217,8 +217,7 @@ interfaces {
             }
         }
     }
-}
-vlans {
+}vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
