removed dead and native vlans from trunks

--- a/_output/AN5.conf
+++ b/_output/AN5.conf
@@ -55,7 +55,7 @@ interfaces {
                 native-vlan-id 999;
                 port-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ];
+                    members [ USERS  PHONES  PRINTERS  MGMT ];
                 }
             }
         }
@@ -120,7 +120,8 @@ interfaces {
             }
         }
     }
-}vlans {
+}
+vlans {
     CN1_USERS {
         vlan-id 110;
         l3-interface irb.110;
