--- a/_output/AN8.conf
+++ b/_output/AN8.conf
@@ -55,7 +55,7 @@ interfaces {
                 native-vlan-id 999;
                 port-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ];
+                    members [ USERS  PHONES  PRINTERS  MGMT ];
                 }
             }
         }
@@ -150,7 +150,8 @@ interfaces {
             }
         }
     }
-}vlans {
+}
+vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
