--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -121,7 +121,7 @@ interfaces {
                 native-vlan-id 999;
                 port-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ];
+                    members [ USERS  PHONES  PRINTERS  MGMT ];
                 }
             }
         }
@@ -132,7 +132,7 @@ interfaces {
                 native-vlan-id 999;
                 port-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ];
+                    members [ USERS  PHONES  PRINTERS  MGMT ];
                 }
             }
         }
@@ -217,7 +217,8 @@ interfaces {
             }
         }
     }
-}vlans {
+}
+vlans {
     CN2_USERS {
         vlan-id 210;
         l3-interface irb.210;
