--- a/_output/set/DN1.conf
+++ b/_output/set/DN1.conf
@@ -35,34 +35,18 @@ set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb u
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 family inet no-redirects
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/2 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/2 unit 0 family ethernet-switching port-mode trunk
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/2 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ]
+set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/2 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/3 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/3 unit 0 family ethernet-switching port-mode trunk
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/3 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ]
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/4 disable
+set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/3 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/4 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/4 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/5 disable
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/5 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/5 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/6 disable
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/6 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/6 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/7 disable
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/7 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/7 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/8 disable
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/8 unit 0 family ethernet-switching port-mode access
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/8 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/9 disable
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/9 unit 0 family ethernet-switching port-mode access
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/9 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/10 disable
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/10 unit 0 family ethernet-switching port-mode access
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/10 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/11 disable
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/11 unit 0 family ethernet-switching port-mode access
-set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb unit CN1999 xe-0/0/11 unit 0 family ethernet-switching vlan members CN1_USERS
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb vlans CN1_USERS vlan-id 110
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb vlans CN1_USERS l3-interface irb.110
 set interfaces irb unit CN110 irb unit CN120 irb unit CN130 irb unit CN140 irb unit CN1666 irb vlans CN1_USERS description CN1_Users
