--- a/_output/set/DN2.conf
+++ b/_output/set/DN2.conf
@@ -35,32 +35,24 @@ set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb u
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 family inet no-redirects
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/2 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/2 unit 0 family ethernet-switching port-mode trunk
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/2 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ]
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/2 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/3 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/3 unit 0 family ethernet-switching port-mode trunk
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/3 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ]
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/4 disable
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/3 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/4 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/4 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/5 disable
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/5 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/5 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/6 disable
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/6 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/6 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/7 disable
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/7 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/7 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/8 disable
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/8 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/8 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/9 disable
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/9 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/9 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/10 disable
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/10 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/10 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/11 disable
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/11 unit 0 family ethernet-switching port-mode access
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb unit CN2999 xe-0/0/11 unit 0 family ethernet-switching vlan members CN2_USERS
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb vlans CN2_USERS vlan-id 210
