--- a/_output/set/AN7.conf
+++ b/_output/set/AN7.conf
@@ -17,40 +17,21 @@ set interfaces irb unit 240 family inet no-redirects
 set interfaces irb unit 240 family inet description CN2_MGMT
 set interfaces xe-0/0/0 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces xe-0/0/0 unit 0 family ethernet-switching port-mode trunk
-set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT  DEAD_VLAN  NATIVE_VLAN ]
-set interfaces xe-0/0/1 disable
+set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
 set interfaces xe-0/0/1 unit 0 family ethernet-switching port-mode access
 set interfaces xe-0/0/1 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/2 disable
 set interfaces xe-0/0/2 unit 0 family ethernet-switching port-mode access
 set interfaces xe-0/0/2 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/3 disable
 set interfaces xe-0/0/3 unit 0 family ethernet-switching port-mode access
 set interfaces xe-0/0/3 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/4 disable
 set interfaces xe-0/0/4 unit 0 family ethernet-switching port-mode access
 set interfaces xe-0/0/4 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/5 disable
 set interfaces xe-0/0/5 unit 0 family ethernet-switching port-mode access
 set interfaces xe-0/0/5 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/6 disable
 set interfaces xe-0/0/6 unit 0 family ethernet-switching port-mode access
 set interfaces xe-0/0/6 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/7 disable
 set interfaces xe-0/0/7 unit 0 family ethernet-switching port-mode access
 set interfaces xe-0/0/7 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/8 disable
-set interfaces xe-0/0/8 unit 0 family ethernet-switching port-mode access
-set interfaces xe-0/0/8 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/9 disable
-set interfaces xe-0/0/9 unit 0 family ethernet-switching port-mode access
-set interfaces xe-0/0/9 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/10 disable
-set interfaces xe-0/0/10 unit 0 family ethernet-switching port-mode access
-set interfaces xe-0/0/10 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/11 disable
-set interfaces xe-0/0/11 unit 0 family ethernet-switching port-mode access
-set interfaces xe-0/0/11 unit 0 family ethernet-switching vlan members CN2_USERS
 set vlans CN2_USERS vlan-id 210
 set vlans CN2_USERS l3-interface irb.210
 set vlans CN2_USERS description CN2_Users
