added mstp configuration statement

--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -270,4 +270,48 @@ protocols {
             }
             reference-bandwidth 100g;
         }
+ 
+        mstp {
+            bpdu-block-on-edge;
+            configuration-name labregion1;
+            bridge-priority 8k;
+            interface all;
+            interface xe-0/0/4 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/5 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/6 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/7 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/8 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/9 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/10 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/11 {
+                no-root-port;
+                edge;
+            }
+            msti 1 {
+                bridge-priority ;
+                vlan [ USERS  PHONES  PRINTERS  MGMT ];
+            }
+            
+        }
 }
