--- a/_output/AN8.conf
+++ b/_output/AN8.conf
@@ -181,3 +181,52 @@ vlans {
         description NATIVE_VLAN;
     }
 }
+protocols {
+        mstp {
+            bpdu-block-on-edge;
+            configuration-name labregion1;
+            bridge-priority 16k;
+            interface all;
+            interface xe-0/0/1 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/2 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/3 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/4 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/5 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/6 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/7 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/8 {
+                no-root-port;
+                edge;
+            }
+            interface xe-0/0/9 {
+                no-root-port;
+                edge;
+            }
+            msti 1 {
+                bridge-priority ;
+                vlan [ USERS  PHONES  PRINTERS  MGMT ];
+            }
+            
+        }
+}
