fixed missing bridge priority in msti1

--- a/_output/AN7.conf
+++ b/_output/AN7.conf
@@ -196,7 +196,7 @@ protocols {
                 edge;
             }
             msti 1 {
-                bridge-priority ;
+                bridge-priority 16k;
                 vlan [ USERS  PHONES  PRINTERS  MGMT ];
             }
             
