--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -309,7 +309,7 @@ protocols {
                 edge;
             }
             msti 1 {
-                bridge-priority ;
+                bridge-priority 8k;
                 vlan [ USERS  PHONES  PRINTERS  MGMT ];
             }
             
