--- a/_output/AN5.conf
+++ b/_output/AN5.conf
@@ -182,7 +182,7 @@ protocols {
                 edge;
             }
             msti 1 {
-                bridge-priority ;
+                bridge-priority 16k;
                 vlan [ USERS  PHONES  PRINTERS  MGMT ];
             }
             
